<resources>
    <string name="app_name">Smart VPN</string>
    <string name="todo">TODO</string>
    <string name="connected">Connected</string>
    <string name="developer_message">This app is for educational use. The developer is not responsible for any misuse.</string>
    <string name="download">Download</string>
    <string name="mbps">" mbps"</string>
    <string name="_0">0</string>
    <string name="_0_mbps">0 MB/s</string>
    <string name="upload">Upload</string>
    <string name="ip">"IP: "</string>
    <string name="_0_0_0_0">0.0.0.0</string>
    <string name="status">"Status: "</string>
    <string name="_0_0_0">0:0:0</string>
    <string name="country">Country</string>
    <string name="ip_0_0_0_0">"0.0.0.0"</string>

    <string name="change_server_location">"Change server location"</string>

    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="rate">Rate</string>

    <string name="network_info">Network info</string>
    <string name="favorite_server">Favorite servers</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate us</string>
    <string name="other_app">Other app</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="source_code">Source code</string>
    <string name="about">About</string>

    <string name="update_title">About Smart VPN</string>
    <string name="update_content">Smart VPN</string>
    <string name="app_info">App Info</string>
    <string name="update_no">Info</string>



    <string name="vpn_on">VPN ON</string>
    <string name="vpn_off">VPN OFF</string>
    <string name="navigation_drawer_open">drawer open</string>
    <string name="navigation_drawer_close">drawer close</string>
    <string name="connect">Connect</string>
    <string name="connecting">Connecting</string>
    <string name="disconnect">Disconnect</string>
    <string name="connection_close_confirm">Would you like to cancel the current VPN Connection?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="_0_0_kb_0_0_b_s">0.0 kB - 0.0 B/s</string>
    <string name="copyright_2023_8211_2024">Copyright © 2023 – 2024</string>
    <string name="app_description">Enhances your online privacy and security with an ultra-fast connection, providing continuous safeguarding for your digital experience.</string>
    <string name="start_test">Start Test</string>
    <string name="test_running">Test Running</string>
    <string name="speed_test_completed">Speed test completed</string>
    <string name="speed_test_unavailable">Could not reach a speed test server</string>
    <string name="speed_test_failed">Speed test failed: the test server did not respond</string>
    <string name="ping_ms">%1$s ms</string>
    <string name="ping_unavailable">n/a</string>
    <string name="rate_mbps">%1$s Mbps</string>
    <string name="rate_unavailable">n/a</string>
    <string name="no_servers_yet">No servers yet. Pull down to refresh.</string>

    <!-- Connect / disconnect flow -->
    <string name="cancel_vpn_title">Cancel VPN connection</string>
    <string name="cancel_vpn_message">Are you sure you want to cancel the current VPN connection?</string>
    <string name="change_vpn_title">Change VPN server</string>
    <string name="change_vpn_message">Are you sure you want to change the VPN server? Your current session will be disconnected.</string>
    <string name="exit_confirmation">Exit confirmation</string>
    <string name="exit_confirmation_message">Are you sure you want to exit the app?</string>
    <string name="vpn_permission_denied">VPN permission was denied</string>
    <string name="no_server_selected">No server selected yet</string>
    <string name="invalid_server_config">This server configuration could not be read. Try another server.</string>
    <string name="disconnect_success">Disconnected</string>

    <!-- Connection status log -->
    <string name="vpn_connected">Connected</string>
    <string name="vpn_paused">Paused</string>
    <string name="no_network">No network connection</string>
    <string name="auth_failed">Authentication failed. Try another server.</string>
    <string name="permission_denied">Permission denied</string>
    <string name="waiting_for_server">Waiting for server connection...</string>
    <string name="server_authenticating">Server authenticating...</string>
    <string name="reconnecting">Reconnecting...</string>
    <string name="waiting_for_orbot">Waiting for Orbot to start...</string>
    <string name="user_input_required">Waiting for your input</string>
    <string name="no_traffic">0.0 kB - 0.0 B/s</string>

    <!-- Rate / share -->
    <string name="share_app">Share %1$s with:</string>
    <string name="rate_title">Enjoying %1$s?</string>
    <string name="rate_message">If you like our app, please give it a 5 star rating on Google Play. Thank you!</string>

    <string-array name="ranges">
        <item>16</item>
        <item>25</item>
        <item>40</item>
        <item>100</item>
    </string-array>

    <string-array name="rangeColors">
        <item>#E7202B</item>
        <item>#E86F21</item>
        <item>#E8E721</item>
        <item>#1BCA21</item>
    </string-array>
</resources>