<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable
            name="vm"
            type="com.newagedevs.smartvpn.view.ui.MainViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="?attr/bgColor"
        android:gravity="center_horizontal"
        tools:context=".view.ui.AboutActivity">

        <com.hjq.bar.TitleBar
            android:id="@+id/tb_main_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:statusBarColor"
            app:title="About Smart VPN"
            app:leftIcon="@drawable/ic_left_2"
            app:rightIcon="@drawable/ic_info"
            app:leftIconTint="?attr/iconColor"
            app:rightIconTint="?attr/iconColor"
            app:titleColor="?attr/titleColor"
            app:lineVisible="false"/>

        <LinearLayout
            style="@style/SelectedCountryLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:background="@drawable/ripple_background"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:gravity="center"
                android:text="@string/app_description" />

        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="@dimen/dp_10"
            android:layout_marginVertical="@dimen/dp_5"
            android:padding="@dimen/dp_10"
            android:orientation="horizontal"
            android:background="@drawable/ripple_background"
            android:gravity="center"
            android:clickable="true"
            android:onClick="onSourceCodeClicked"
            android:focusable="true">

            <ImageView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_source_control"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                android:textColor="?attr/titleColor"
                android:singleLine="true"
                android:ellipsize="end"
                android:text="@string/source_code" />
        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="@dimen/dp_10"
            android:layout_marginVertical="@dimen/dp_5"
            android:padding="@dimen/dp_10"
            android:orientation="horizontal"
            android:background="@drawable/ripple_background"
            android:gravity="center"
            android:clickable="true"
            android:onClick="onOtherAppClicked"
            android:focusable="true">

            <ImageView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_shopping_cart"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                android:textColor="?attr/titleColor"
                android:singleLine="true"
                android:ellipsize="end"
                android:text="@string/other_app" />
        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="@dimen/dp_10"
            android:layout_marginVertical="@dimen/dp_5"
            android:padding="@dimen/dp_10"
            android:orientation="horizontal"
            android:background="@drawable/ripple_background"
            android:gravity="center"
            android:clickable="true"
            android:onClick="onPrivacyPolicyClicked"
            android:focusable="true">

            <ImageView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_shield_keyhole"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                android:textColor="?attr/titleColor"
                android:singleLine="true"
                android:ellipsize="end"
                android:text="@string/privacy_policy" />
        </LinearLayout>



        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/dp_20"
            android:text="@string/copyright_2023_8211_2024"
            android:textColor="#BDBDBD" />

    </LinearLayout>
</layout>